Bug 164677 - FILESAVE ODT Column separator color not saved correctly
Summary: FILESAVE ODT Column separator color not saved correctly
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.2.0 target:25.8.3
Keywords:
Depends on:
Blocks: Page-Layout-Columns
  Show dependency treegraph
 
Reported: 2025-01-12 18:18 UTC by Fabio Betti
Modified: 2025-10-20 18:36 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
documento sul quale ho riscontrato il problema (4.58 MB, application/vnd.oasis.opendocument.text)
2025-01-12 18:20 UTC, Fabio Betti
Details
pdf stampato del documento precedentemente inviato (2.10 MB, application/pdf)
2025-01-12 18:22 UTC, Fabio Betti
Details
A sample to test save-and-reload (1.89 KB, application/vnd.oasis.opendocument.text)
2025-10-14 19:58 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fabio Betti 2025-01-12 18:18:30 UTC Comment hidden (obsolete)
Comment 1 Fabio Betti 2025-01-12 18:20:09 UTC
Created attachment 198504 [details]
documento sul quale ho riscontrato il problema
Comment 2 Fabio Betti 2025-01-12 18:22:27 UTC
Created attachment 198505 [details]
pdf stampato del documento precedentemente inviato
Comment 3 BogdanB 2025-01-12 19:15:34 UTC
Description:
By inserting between column characteristics from the format/columns menu, the characteristics of the "separation line" are not stored correctly (line thickness, color)

Steps to Reproduction:
1.create a section
2.Menu format/columns
3.specific 2 or more
4.Acting the separation of columns
5. check a thickness
6.check one color
7.Close menu
8. people the columns with text
9.I create a new section
10.I repeat steps 2 to 8
11.except
12.Close document
13.I reopen it on another computer the characteristics of thickness and color are not those assigned

Actual Results:
columns are not as modeled before closing the document.

Expected Results:
When the cocument reopens the columns are not as modeled before closing the document.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.3.2.2 (x64) / LibreOffice Community
Build ID: 49f2b1bff42cfccbd8f788c8dc32c1c309559be0
CPU threads: 12; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Local: en-EN; UI: en-EN
Calc: threaded
----------------------
Translated with LibreTranslate
Comment 4 BogdanB 2025-01-12 19:18:03 UTC
The first document is "document on which I found the problem", the second document is "printed PDF of the document previously sent".
Comment 5 Buovjaga 2025-10-14 18:58:41 UTC
(In reply to BogdanB from comment #3)
> Description:
> By inserting between column characteristics from the format/columns menu,
> the characteristics of the "separation line" are not stored correctly (line
> thickness, color)
> 
> Steps to Reproduction:
> 1.create a section
> 2.Menu format/columns
> 3.specific 2 or more
> 4.Acting the separation of columns
> 5. check a thickness
> 6.check one color
> 7.Close menu
> 8. people the columns with text
> 9.I create a new section
> 10.I repeat steps 2 to 8
> 11.except
> 12.Close document
> 13.I reopen it on another computer the characteristics of thickness and
> color are not those assigned

Repro with two sections and two different separator colors: after saving and reloading, both sections use the same separator color.

Bibisected with linux-64-7.2 to 95ebd24a629b4c8cd62cc20c0701683512cc8fa0
editengine-columns: ODF support [API CHANGE]
Comment 6 Mike Kaganski 2025-10-14 19:54:11 UTC
(In reply to Buovjaga from comment #5)

I can't reproduce a normal behavior (keeping separator color after save-and-reload) in no version starting from 3.3.
Comment 7 Mike Kaganski 2025-10-14 19:58:38 UTC
Created attachment 203335 [details]
A sample to test save-and-reload
Comment 8 Mike Kaganski 2025-10-15 06:39:47 UTC
My guess wrt. "regression" would be that Buovjaga saw bug 150235 in the testing, which was different.
Comment 9 Mike Kaganski 2025-10-15 06:40:38 UTC
But let me take it anyway :-)
Comment 10 Commit Notification 2025-10-19 09:21:25 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/baf57e584653e7bc1b38a914e584ecc4a6ece264

tdf#164677: separator properties in XMLTextColumnsPropertyHandler::equals

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 BogdanB 2025-10-19 09:49:07 UTC
Bad in
Version: 25.8.2.2 (X86_64)
Build ID: d401f2107ccab8f924a8e2df40f573aab7605b6f
CPU threads: 16; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

It's perfect in
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: baf57e584653e7bc1b38a914e584ecc4a6ece264
CPU threads: 16; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

Thanks, Mike.
Comment 12 Commit Notification 2025-10-20 18:36:56 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/b2947edc956ebd42b994ff08a96ec0fa43a2ec90

tdf#164677: separator properties in XMLTextColumnsPropertyHandler::equals

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.